--- a/.xrc
+++ b/.xrc
@@ -2,8 +2,12 @@ if [ -d "$HOME/bin" ] ; then
     PATH="$HOME/bin:$PATH"
 fi
 
+if [ -d "$HOME/.local/bin" ] ; then
+    PATH="$HOME/.local/bin:$PATH"
+fi
+
 # Load aliases file
 if [ -f $HOME/.aliases ]; then
-    source $HOME/.aliases
+    source "$HOME/.aliases"
 fi
 
