--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,6 +4,7 @@ set -g default-terminal "screen-256color"
 unbind C-b
 set-option -g prefix C-Space
 bind-key C-Space send-prefix
+set -g status-style 'bg=#333333 fg=#5eacd3'
 
 unbind r
 bind r source-file ~/.tmux.conf
