Tmux splits open in current path

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -18,11 +18,11 @@ bind -r h resize-pane -L 5
 bind -r m resize-pane -Z
 
 unbind %
-bind v split-window -h 
+bind v split-window -h -c "#{pane_current_path}"
 
 unbind '"'
 unbind s
-bind s split-window -v
+bind s split-window -v -c "#{pane_current_path}"
 
 bind S choose-session
 
