Adds vim mode to tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,6 +8,13 @@ bind-key C-Space send-prefix
 set -g status-style 'bg=#333333 fg=#5eacd3'
 set -g mouse on
 
+# vim mode with <prefix>[  (press q to quit)
+set-window-option -g mode-keys vi
+# start selecting text with "v"
+bind-key -T copy-mode-vi 'v' send -X begin-selection
+# copy text with "y"
+bind-key -T copy-mode-vi 'y' send -X copy-selection
+
 unbind r
 bind r source-file ~/.tmux.conf
 
