Binds <prefix>Space to choose-session

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -32,6 +32,7 @@ unbind s
 bind s split-window -v -c "#{pane_current_path}"
 
 bind S choose-session
+bind Space choose-session
 
 # This replaces the readline clear screen
 bind C-l send-keys 'C-l'
