--- a/.tmux.conf
+++ b/.tmux.conf
@@ -14,6 +14,8 @@ set-window-option -g mode-keys vi
 bind-key -T copy-mode-vi 'v' send -X begin-selection
 # copy text with "y"
 bind-key -T copy-mode-vi 'y' send -X copy-selection
+# don't exit copy mode when dragging with mouse
+unbind -T copy-mode-vi MouseDragEnd1Pane
 
 unbind r
 bind r source-file ~/.tmux.conf
