--- a/.tmux.conf
+++ b/.tmux.conf
@@ -17,6 +17,9 @@ bind-key -T copy-mode-vi 'y' send -X copy-selection
 # don't exit copy mode when dragging with mouse
 unbind -T copy-mode-vi MouseDragEnd1Pane
 
+# remove delay for exiting insert mode with ESC in Neovim
+set -sg escape-time 10
+
 unbind r
 bind r source-file ~/.tmux.conf
 
