--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,7 +5,6 @@ unbind C-b
 set-option -g prefix C-Space
 bind-key C-Space send-prefix
 
-set -g status-style 'bg=#333333 fg=#5eacd3'
 set -g mouse on
 
 # vim mode with <prefix>[  (press q to quit)
@@ -47,6 +46,8 @@ set -g @plugin 'tmux-plugins/tpm'
 
 # plugins
 set -g @plugin 'christoomey/vim-tmux-navigator'
+
+source-file "~/.tmux/theme.conf"
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
