--- a/.tmux.conf
+++ b/.tmux.conf
@@ -47,7 +47,7 @@ set -g @plugin 'tmux-plugins/tpm'
 # plugins
 set -g @plugin 'christoomey/vim-tmux-navigator'
 
-source-file "~/.tmux/theme.conf"
+source-file "~/.tmux/theme/theme.conf"
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
