--- a/.tmux/theme/theme.conf
+++ b/.tmux/theme/theme.conf
@@ -18,4 +18,6 @@ set -g @plugin 'catppuccin/tmux#v1.0.1'
 set -g @catppuccin_flavor 'mocha'
 
 set -g status-left ""
-set -g status-right "#{E:@catppuccin_status_session}"
+
+set -g status-right "#(~/.tmux/theme/gitrepo.sh \"#{pane_current_path}\")"
+set -ag status-right "#{E:@catppuccin_status_session}"
