--- a/.tmux/theme/theme.conf
+++ b/.tmux/theme/theme.conf
@@ -12,12 +12,12 @@ set -g @catppuccin_status_right_separator ""
 set -g @catppuccin_status_fill "icon"
 set -g @catppuccin_status_connect_separator "no"
 
-set -g @catppuccin_directory_text "#{pane_current_path}"
+set -g @catppuccin_directory_text '#(~/.tmux/theme/gitrepo.sh "#{pane_current_path}")'
 
 set -g @plugin 'catppuccin/tmux#v1.0.1'
 set -g @catppuccin_flavor 'mocha'
 
 set -g status-left ""
 
-set -g status-right "#(~/.tmux/theme/gitrepo.sh \"#{pane_current_path}\")"
+set -g status-right "#{E:@catppuccin_status_directory}"
 set -ag status-right "#{E:@catppuccin_status_session}"
