--- a/.tmux/theme/theme.conf
+++ b/.tmux/theme/theme.conf
@@ -13,11 +13,15 @@ set -g @catppuccin_status_fill "icon"
 set -g @catppuccin_status_connect_separator "no"
 
 set -g @catppuccin_directory_text '#(~/.tmux/theme/gitrepo.sh "#{pane_current_path}")'
+set -g @catppuccin_gitmux_text '#(gitmux -cfg ~/.tmux/theme/gitmux.conf "#{pane_current_path}")'
+set -g @catppuccin_gitmux_color "#{@thm_sky}"
 
 set -g @plugin 'catppuccin/tmux#v1.0.1'
 set -g @catppuccin_flavor 'mocha'
 
 set -g status-left ""
 
+set -g status-right-length 80
 set -g status-right "#{E:@catppuccin_status_directory}"
+set -ag status-right "#{E:@catppuccin_status_gitmux}"
 set -ag status-right "#{E:@catppuccin_status_session}"
