--- a/.tmux.conf
+++ b/.tmux.conf
@@ -48,6 +48,7 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 
 source-file "~/.tmux/theme/theme.conf"
+source-file "~/.tmux/local.conf"
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
