Tmux enter search-up immediately after leader + /

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -38,6 +38,9 @@ bind s split-window -v -c "#{pane_current_path}"
 bind S choose-session
 bind Space choose-session
 
+# Enter search up mode immediately after leader + /
+bind-key / copy-mode \; send-key ?
+
 # This replaces the readline clear screen
 bind C-l send-keys 'C-l'
 
