--- a/.xrc
+++ b/.xrc
@@ -16,6 +16,10 @@ if [ -f $HOME/.env ]; then
     source "$HOME/.env"
 fi
 
+if [ -e $HOME/.nix-profile/etc/profile.d/nix.sh ]; then
+    source $HOME/.nix-profile/etc/profile.d/nix.sh
+fi
+
 # Load the .localrc file for local specific settings
 if [ -f $HOME/.localrc ]; then
     source "$HOME/.localrc"
