Add nixpkgs install script (#1)
* Initial nix commit

* Loads nix after .localrc

Must take precedence over any other package managers, for example brew.

--- a/.xrc
+++ b/.xrc
@@ -21,6 +21,10 @@ if [ -f $HOME/.localrc ]; then
     source "$HOME/.localrc"
 fi
 
+if [ -e $HOME/.nix-profile/etc/profile.d/nix.sh ]; then
+    source $HOME/.nix-profile/etc/profile.d/nix.sh
+fi
+
 # Start tmux if tmux exists and not currently in session
 if command -v tmux &> /dev/null && [ -z "$TMUX" ]; then
     exec tmux
